# practicas-profesionalizantes-3

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  app.py  pyproject.toml  pytest.ini  users.db
backend/test/: conftest.py
diagnostico/actividad-2/: D2-0.html  D2-1.html  D2-2.html  D2-3.html  D2-4.html  D2-7.html
diagnotico/actividad-1/: calculadora.html
diagnotico/actividad-2/: D2-5.html  D2-6.html  D2-8.html
diagnotico/actividad-3/: calculadora_refactor.html
fp/: Videos.txt
fp/backend/: .env  .env.example  app.py  pyproject.toml  users.db
fp/backend/src/configs/: db.py  gemini_config.py
fp/backend/src/controllers/: auth_controller.py  gemini_controller.py
fp/backend/src/models/: gemini_model.py  user_model.py
fp/backend/src/routes/auth/: auth_routes.py
fp/backend/src/routes/llm/: gemini_route.py
fp/backend/src/services/: auth_service.py  gemini_service.py
fp/backend/src/test/: auth_route_test.py  conftest.py  gemini_service_test.py
fp/backend/src/test/integration/: test_gemini_api_integration.py
fp/backend/src/test/unit/: test_auth_service.py  test_gemini_service.py
fp/backend/src/utils/: auth_utils.py  error_handler.py
fp/backend/test/: conftest.py
fp/backend/test/integration/: test_gemini_api_integration.py
fp/backend/test/unit/: test_auth_service.py  test_gemini_service.py
fp/doc/: Doc.json
fp/docker/: Dockerfile.yml
fp/frontend/: index.html  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  (+1 more)
release/: instructions.txt
(+95 files in other folders)
